--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,24 +1,12 @@
-<form [formGroup]="createItemForm" (ngSubmit)="onSubmit()">
+<div class="container-fluid mt--7">
   <div class="row">
-    <div class="col-md-6">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Producto" formControlName="name" />
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Descripcion" formControlName="description" />
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="0.0" formControlName="price" />
+    <div class="col">
+      <div class="card shadow">
+        <div class="card-header border-0">
+          <h3 class="mb-0">Items</h3>
+        </div>
+        <app-item-list [items]="items"></app-item-list>
       </div>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <button type="submit" class="btn btn-default">Crear</button>
-  </div>
-</form>
+</div>
