--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -2,8 +2,9 @@
   <div class="row">
     <div class="col">
       <div class="card shadow">
-        <div class="card-header border-0">
+        <div class="d-flex justify-content-between card-header border-0">
           <h3 class="mb-0">Items</h3>
+          <app-item-create></app-item-create>
         </div>
         <app-item-list [items]="items"></app-item-list>
       </div>
