reset to default values after submiting

--- a/src/app/items/item-create/item-create.component.html
+++ b/src/app/items/item-create/item-create.component.html
@@ -60,6 +60,7 @@
             itemForm.controls['description']?.dirty && itemForm.controls['description']?.valid ? 'is-valid' : '',
             itemForm.controls['description']?.dirty && itemForm.controls['description']?.invalid ? 'is-invalid' : ''
           ]"
+          value=""
           placeholder="Item's Description"
         />
         <div
