--- a/src/app/items/item-list/item-list.component.html
+++ b/src/app/items/item-list/item-list.component.html
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of items">
+      <tr *ngFor="let item of items; let i = index">
         <th scope="row">
           <div class="media-body">
             <span class="mb-0 text-sm">{{ item.name }}</span>
@@ -33,7 +33,7 @@
             </a>
             <div ngbDropdownMenu class="dropdown-menu-right dropdown-menu-arrow">
               <a class="dropdown-item" href="#">Edit</a>
-              <a class="dropdown-item" href="#">Delete</a>
+              <a class="dropdown-item" (click)="open(content, i)" href="#">Delete</a>
             </div>
           </div>
         </td>
@@ -56,3 +56,28 @@
     </ul>
   </nav>
 </div>
+
+<!-- modal -->
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-title">Removing Item</h4>
+    <button type="button" class="close" aria-describedby="modal-title" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>
+      <strong
+        >Are you sure you want to delete <span class="text-primary">{{ itemToDelete.name }}</span> item?</strong
+      >
+    </p>
+    <p>
+      All information associated to this item will be permanently deleted.
+      <span class="text-danger">This operation can not be undone.</span>
+    </p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('cancel click')">Cancel</button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Ok click')">Confirm</button>
+  </div>
+</ng-template>
