set min-height to 365px
Co-authored-by: Luis <felipe.cadavid@udea.edu.co>
Co-authored-by: Sandra <sandrap.mejia@udea.edu.co>

--- a/src/app/items/item-create/item-create.component.html
+++ b/src/app/items/item-create/item-create.component.html
@@ -39,6 +39,7 @@
             itemForm.controls['name']?.dirty && itemForm.controls['name']?.invalid ? 'is-invalid' : ''
           ]"
           placeholder="Item's Name"
+          value=""
           required
         />
         <div *ngIf="itemForm.controls['name']?.dirty && itemForm.controls['name']?.invalid" class="invalid-feedback">
@@ -86,6 +87,7 @@
               itemForm.controls['price']?.dirty && itemForm.controls['price']?.invalid ? 'is-invalid' : ''
             ]"
             placeholder="Price"
+            value=""
             required
           />
           <div class="invalid-feedback">Please provide a valid amount.</div>
