--- a/src/app/items/item-list/item-list.component.html
+++ b/src/app/items/item-list/item-list.component.html
@@ -1,5 +1,5 @@
 <!-- table -->
-<div style="overflow-x: visible" class="table-responsive h-auto">
+<div style="overflow-x: visible; min-height: 365px;" class="table-responsive h-auto">
   <table class="table align-items-center table-flush">
     <thead class="thead-light">
       <tr>
